# netotech

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  run.sh
alembic/: README  env.py
alembic/versions/: a06461c21598_add_chemical_and_inventory_models.py
src/: config.py  database.py  exceptions.py  main.py  models.py  seed_data.py
src/chemical/: models.py  router.py  schemas.py
